# LOCAL-GMAIL-PROTECTION-Inbox-Sentinel

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  models.py  security.py
app/services/: __init__.py  classifier.py  email_parser.py  gmail.py  sync.py  types.py
app/static/: styles.css
app/templates/: _sync_status.html  base.html  index.html  message_detail.html  messages.html  settings.html
tests/: __init__.py  conftest.py  test_auth.py  test_classifier.py  test_email_parser.py  test_gmail_auth_manager.py  test_gmail_client.py  test_routes.py  test_sync.py
